# ThermogramForge

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  check_app.py  main.py  mypy.ini  pyproject.toml  pytest.ini  run_app.py  setup_dev.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  app.py  main.py
app/assets/: ag_grid_renderers.js  custom.css
app/callbacks/: __init__.py  baseline_callbacks.py  control_panel_callbacks.py  processed_upload_callbacks.py  report_builder_callbacks.py  upload_callbacks.py  visualization_callbacks.py
app/components/: __init__.py  renderers.py  thermogram_plot.py  upload_processed_modal.py
app/layouts/: __init__.py  main_layout.py
app/utils/: __init__.py  baseline_utils.py  data_processing.py  debug_utils.py  layout_checker.py  plotting_utils.py  visualization.py
core/baseline/: __init__.py  advanced.py  simple.py
core/metrics/: __init__.py  metric_calculation.py
core/peaks/: __init__.py  peak_detection.py
docs/: CONTRIBUTING.md  Makefile  conf.py  index.rst  installation.md  r_integration.md
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: index.doctree
docs/_build/html/.doctrees/api/: app.doctree  core.doctree  index.doctree
docs/_build/html/.doctrees/contributing/: building_docs.doctree  coding_conventions.doctree  getting_started.doctree  index.doctree  project_structure.doctree  testing.doctree  workflow.doctree
docs/_build/html/.doctrees/user_guide/: data_formats.doctree  index.doctree  installation.doctree  interface.doctree  metrics.doctree  quickstart.doctree  reviewing_samples.doctree  troubleshooting.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/app/: callbacks.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/api/: app.rst.txt  core.rst.txt
docs/_build/html/_sources/contributing/: coding_conventions.rst.txt  getting_started.rst.txt  index.rst.txt  testing.rst.txt  workflow.rst.txt
docs/_build/html/_sources/user_guide/: data_formats.rst.txt  index.rst.txt  installation.rst.txt  interface.rst.txt  metrics.rst.txt  reviewing_samples.rst.txt  troubleshooting.rst.txt
docs/_build/html/api/: app.html  core.html  index.html
docs/_build/html/api/_autosummary/: app.app.html  app.callbacks.baseline_callbacks.html  app.callbacks.control_panel_callbacks.html  app.callbacks.html  app.callbacks.processed_upload_callbacks.html  app.callbacks.report_builder_callbacks.html  app.callbacks.upload_callbacks.html  app.callbacks.visualization_callbacks.html  app.components.html  app.components.renderers.html  app.components.upload_processed_modal.html  app.layouts.html  app.layouts.main_layout.html  app.utils.baseline_utils.html  app.utils.data_processing.html  app.utils.html  app.utils.layout_checker.html  app.utils.visualization.html  core.baseline.html  (+6 more)
docs/_build/html/contributing/: building_docs.html  coding_conventions.html  getting_started.html  index.html  project_structure.html  testing.html  workflow.html
docs/_build/html/user_guide/: data_formats.html  index.html  installation.html  interface.html  metrics.html  quickstart.html  reviewing_samples.html  troubleshooting.html
docs/api/: app.rst  core.rst  index.rst  modules.rst  thermogram_baseline.rst
docs/api/_autosummary/: app.callbacks.baseline_callbacks.rst  app.callbacks.report_builder_callbacks.rst  app.components.upload_processed_modal.rst  app.layouts.main_layout.rst  app.layouts.rst  app.utils.layout_checker.rst  app.utils.visualization.rst  core.baseline.rst  core.baseline.simple.rst  core.metrics.metric_calculation.rst  core.metrics.rst  core.peaks.peak_detection.rst  core.peaks.rst
docs/contributing/: building_docs.rst  coding_conventions.rst  getting_started.rst  index.rst  project_structure.rst  testing.rst  workflow.rst
docs/developer/: thermogram_baseline_dev_guide.md
docs/source/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  r_integration.rst  test_data.rst  usage.rst
docs/source/design/: spline_fitter_analysis.rst
docs/user/: thermogram_baseline_guide.md
docs/user_guide/: data_formats.rst  installation.rst  interface.rst  metrics.rst  quickstart.rst  reviewing_samples.rst
examples/: README.md
scripts/: build_macos.py  build_windows.py  check_r_environment.py  create_mock_thermogram_data.py  generate_r_reference_data.R  generate_requirements.py  generate_sample_data.py  prepare_validation_data.py  process_thermogram.py  verify_thermogram_baseline.py
stubs/plotly/: __init__.pyi  graph_objects.pyi  subplots.pyi
stubs/rpy2/: __init__.pyi
stubs/rpy2/robjects/: __init__.pyi
tests/: conftest.py  data_generators.py  generate_r_reference.py  generate_test_data.py  generate_thermogram_reference.py  inspect_real_thermograms.py  process_real_thermograms.py  test_data_utils.py  utils.py
tests/integration/: test_thermogram_analysis.py
tests/thermogram_baseline/: test_baseline.py  test_endpoint_detection.py  test_init.py  test_integration.py  test_interpolation.py  test_r_direct_integration.py  test_r_validation.py  test_real_data.py  test_spline_fitter.py  test_spline_fitter_edge_cases.py  test_spline_fitter_r_comparison.py  test_thermogram_baseline_init.py
tests/tlbparam/: conftest.py  test_data_loading.py  test_metrics.py  test_peak_detection.py  test_tlbparam_init.py  test_visualization.py
tests/unit/thermogram_baseline/: test_baseline.py  test_batch.py  test_detection.py  test_interpolation.py  test_signal.py  test_subtraction.py  test_visualization.py
thermogram_app/: __init__.py  app.py
thermogram_app/components/: README.md
thermogram_baseline/: __init__.py  baseline.py  endpoint_detection.py  interpolation.py  smooth_spline.py  spline_fitter.py
thermogram_baseline/util/: __init__.py  plotly_export.py
tlbparam/: __init__.py  metrics.py  peak_detection.py  utils.py  visualization.py
(+54 files in other folders)
