[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ThermogramForge"
version = "0.1.0"
description = "Python implementation of thermogram analysis tools"
authors = [
    {name = "Karl Reger", email = "k.c.reger@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "thermogram",
    "analysis",
    "science",
    "research",
    "data",
    "visualization",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0", 
    "scipy>=1.10.0",
    "dash>=2.9.0",
    "plotly>=5.14.0",
    "dash-bootstrap-components>=1.4.0",
    "dash-ag-grid>=6.0.0",
    "openpyxl>=3.1.5",
    "dash-uploader>=0.6.1",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",        # Code formatting
    "ruff>=0.9.10",         # Linting
    "pytest>=8.3.5",        # Testing
    "pytest-cov>=6.0.0",    # Test coverage
    "pre-commit>=2.15.0",   # Pre-commit hooks
    "pyinstaller>=5.13.0",  # For creating standalone executables
]

prod = [
    "gunicorn>=21.2.0",     # WSGI server for production
]

[project.scripts]
thermogram-forge = "app.main:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests"
]
filterwarnings = [
    "ignore::DeprecationWarning:_plotly_utils.basevalidators",
]

[tool.hatch.build.targets.wheel]
packages = [
    "app",
    "core"
]